2003-08-13  Bharat Mediratta  <bharat@menalto.com> 1.4-cvs-b124

	* Changed the release version number from 1.3.5 to 1.4 

2003-08-13 Jens Tkotz  <jens@peino.de> 1.3.5-cvs-b123

        * cleaned up all language files.
          No obsolete entries, no "# " lines, etc.

        * Updated german and hebrew

        * replaced word" Gallery" with Gallery() in search.php

2003-08-13  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b122

	* Change informational strings in Config. Wizard to conform to 
	  packaging decisions.  IE no language packs and README now 
	  basically content free.

2003-08-13  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b121

	* Give the appropriate error message for beta when checking the 
	  gallery version in the Config. Wizard if verion is "-bnn" or 
	  "-RCnn" 

2003-08-13  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b120
	
	* From SF patch 772038: don't use "mailto:" link if there is no
	  email address for album owner.

2003-08-13  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b119

	* Fixed bug introduced in b117 that caused Gallery not to run in 
	  embedded environments.

2003-08-13  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b118
	
	* Simplified messages delivered during Configuration Wizard/check 
	  gallery version code.  

	* Changed $gallery->last_change from a string to a time stamp.

2003-08-12  Andrew Lindeman  <joyoflinux@yahoo.com> 1.3.5-cvs-b117

        * Wipe out the README file.  Basically, the README file now just
          "redirects" people to the docs/ directory, where the docs will
          be distributed with Gallery.

2003-08-12  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b116

	* Improving the strings in Configuration Wizard/check gallery version
	  code.  Probably needs more work before passing to the translators.

2003-08-12  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b115
