@@ -1,3 +1,9 @@
+2003-08-13  Joan McGalliard <gallery@joanhenge.plus.com> 1.4-cvs-b125
+
+	* Provide Link to documentation (if present) from first setup page,
+	  final setup page if there is a problem with files, and on 
+	  albums.php if logged in as admin.
+
 2003-08-13  Bharat Mediratta  <bharat@menalto.com> 1.4-cvs-b124
 
 	* Changed the release version number from 1.3.5 to 1.4 
